--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+pnet = "0.35.0"
 serde = {version = "1.0.217",features = ["derive"]}
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
