--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+etherparse = "0.17.0"
 pnet = "0.35.0"
-serde = {version = "1.0.217",features = ["derive"]}
-serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
+serde = {version = "1.0.217",  features = ["derive"]}
+serde_json = "1.0.138"
+serde_with = "3.12.0"
