--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4.39"
 etherparse = "0.17.0"
+log = "0.4.26"
 pnet = "0.35.0"
 serde = {version = "1.0.217",  features = ["derive"]}
 serde_json = "1.0.138"
 serde_with = "3.12.0"
+simplelog = "0.12.2"
